# pyfem-v2-update

./: .gitignore  README.md  conftest.py  pyproject.toml  run_case.py  run_gui.py
docs/: Architecture_Overview.md  Development_Guide.md  Module_Responsibilities.md  Roadmap_v1.2.md  Test_Gates_and_Benchmarks.md  guide.md  roadmap_v1.md
pygments/: __init__.py  lexer.py  util.py
pygments/formatters/: __init__.py  terminal.py
pygments/lexers/: __init__.py  diff.py  python.py
src/pyfem/: __init__.py
tasks/: 01_bootstrap.md  02_model_compiler.md  03_elements_materials.md  04_procedures_solver.md  05_results_io.md  99_arch_review.md  Prompt.md
tests/: __init__.py  conftest.py  gui_test_support.py
tests/gui/: test_gui_command_registry.py  test_job_workbench.py  test_load_manager_dialogs.py  test_model_edit_dialogs.py  test_navigation_edit_entry.py  test_property_manager_dialogs.py  test_step_manager_dialogs.py
tests/integration/: __init__.py  test_compiler_pipeline.py  test_distributed_load_pipeline.py  test_end_to_end_pipeline.py  test_export_code_bundle_script.py  test_gui_main_window.py  test_inp_importer_pipeline.py  test_multistep_execution_pipeline.py  test_output_request_execution.py  test_postprocessing_pipeline_phase2.py  test_product_shells.py  test_results_contract_pipeline.py  test_results_post_contract_phase1.py  test_results_query_probe.py  test_run_case_script.py  test_runtime_state_pipeline.py
tests/plugin_fixtures/: __init__.py  runtime_registry_plugin.py
tests/regression/: __init__.py  test_b21_corotational_tangent_quality.py  (+22 more)
(+140 files in other folders)
