[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pyfem-v2"
version = "0.1.0"
description = "pyFEM v2 核心架构骨架"
requires-python = ">=3.11"

[project.optional-dependencies]
gui = [
    "PySide6>=6.7",
    "pyvista>=0.44",
    "pyvistaqt>=0.11",
]

[project.scripts]
pyfem-gui = "pyfem.gui.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -p no:cacheprovider"
norecursedirs = ["tmp*"]
markers = [
    "unit: 单元测试门禁。",
    "integration: 集成测试门禁。",
    "verification: 数值验证门禁。",
    "regression: 架构回归门禁。",
    "gate_fast: 面向快速 CI 的主线门禁。",
    "gate_full: 面向较全 CI 的全量门禁。",
    "instance_scope: 实例 / 作用域边界保护。",
    "results_contract: 正式结果合同边界保护。",
    "multistep: 多步结果路径保护。",
    "phase1_baseline: Phase 1 零回归基线。",
]
